--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "components/*": ["src/components/*"],
       "layouts/*": ["src/layouts/*"],
       "pages/*": ["src/pages/*"],
+      "utils/*": ["src/utils/*"],
       "assets/*": ["src/assets/*"],
       "mixins/*": ["src/mixins/*"],
       "boot/*": ["src/boot/*"],
