--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "quasar": "^2.12.2",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
+    "v-money3": "^3.24.0",
     "vue": "^3.0.0",
     "vue-dndrop": "^1.2.2",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
-    "vuefire": "^3.1.12",
+    "vuefire": "^3.1.13",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
