--- a/functions/package.json
+++ b/functions/package.json
@@ -16,11 +16,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1"
+    "firebase-functions": "^4.4.1",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.33"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
