--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "firebase": "^9.0.0",
     "firebase-functions": "^4.2.0",
+    "mongodb": "^6.3.0",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^3.1.0",
     "quasar": "^2.12.2",
